--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "author": "Van Pho Nguyen <vanpho02@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
     "mongoose": "^4.13.5"
   }
 }
