--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "mongoose": "^4.13.5"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
